1999-12-13  Jennifer Hom  <jenn@scriptics.com>

	* library/tcltest1.0/tcltest.tcl: Modified testConstraint(root)
	and testConstraint(notRoot) so that they will be set to the proper
	values if the user name is 'root' or the uid is 0.

	* tests/fCmd.test: Added knownBug constraints to fCmd-8.1,
	fCmd-5.5, and fCmd-6.17; these are potentially dangerous tests.

1999-12-07  Jeff Hobbs  <hobbs@scriptics.com>

	* library/http2.1/http.tcl: fixed error handling in http::Event
	[Bug: 3752]

	* generic/tclUtil.c: fixed Tcl_ScanCountedElement to not step
	beyond the end of the counted string [Bug: 3336]

	* generic/tclCompile.c: fixed 'bad code length' error for
	'expr + {[incr]}' case, with new test case [Bug: 3736]
	and seg fault on 'expr + {[error]}' (different cause) that
	was caused by a correct optimization that didn't correctly
	track how it was modifying the source string in the opt.
	The optimization was removed, which means that:
		expr 1 + {[string length abc]}
	will be not be compiled inline as before, but this should be
	written:
		expr {1 + [string length abc]}
	which will be compiled inline for speed.  This prevents
		expr 1 + {[mindless error]}
	from seg faulting, and only affects optimizations for
	degenerate cases [Bug: 3737]

1999-11-30  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tclLoad.c: #def'd out the unloading of DLLs at finalize
	time for Unix in TclFinalizeLoad. [Bug: 2560 3373]

	* unix/tclUnixPipe.c: fixed PipeBlockModeProc to properly set
	isNonBlocking flag on pipe. [Bug: 1356 710]

	* generic/tclScan.c: fixed scan where %[..] didn't match anything
	[Bug: 3700]

1999-11-19  Jeff Hobbs  <hobbs@scriptics.com>

	* README:
	* generic/tcl.h:
	* unix/configure.in:
	* win/configure.in:
	* win/README.binary: updated to patchlevel 3
	* tools/tcl.wse.in: updated to patchlevel 3, as well as making
	sure tcltest1.0 is installed, and koi-r encoding is installed
	correctly

	* generic/tclCkalloc.c: fixed Tcl_DbCkfree to return a value